# fagent

./: .gitignore  .gitmodules  Cargo.toml  README.md  README.zh-CN.md  WARP.md
docs/: fstorage_overview.md  fstorage_overview.zh-CN.md
econfetcher/: Cargo.toml  WORLD_BANK_MODULE.md
econfetcher/examples/: test_each_indicator.rs  world_bank_example.rs
econfetcher/src/: lib.rs  world_bank.rs
fagent/: Cargo.toml
fagent/dashboard_ui/: app.js  graph.html  graph.js  index.html  styles.css
fagent/src/: lib.rs  main.rs
fagent/tests/: dashboard_api.rs  e2e_sync.rs
fstorage/: Cargo.toml  build.rs  fstorage.md
fstorage/src/: auto_fetchable.rs  catalog.rs  config.rs  embedding.rs  errors.rs  fetch.rs  lake.rs  lib.rs  models.rs  schema_registry.rs  schemas.rs  sync.rs
fstorage/src/utils/: id.rs
fstorage/tests/: common.rs  datalake_layout.rs  edge_queries.rs  graph_pipeline.rs  introspection.rs  node_index.rs  path_search.rs  query_api.rs  readiness_probe.rs  schema_generation.rs  search.rs  sync_from_fixture.rs  vector_pipeline.rs
fstorage/tests/fixtures/gitfetcher/tinykv/: metadata.json
fstorage/tests/fixtures/gitfetcher/tinykv/edges/: edge_hasversion.arrow  edge_hasversion.json  edge_iscommit.arrow  edge_iscommit.json
fstorage/tests/fixtures/gitfetcher/tinykv/nodes/: commit.arrow  commit.json  project.arrow  project.json  version.arrow  version.json
fstorage/tests/fixtures/gitfetcher/tinykv/vectors/: readmechunk.arrow  readmechunk.json
fstorage/tests/support/: fixture.rs
gitfetcher/: Cargo.toml  NETWORK_ANALYSIS.md  test_functionality.sh
gitfetcher/src/: analysis.rs  client.rs  code_workspace.rs  error.rs  export.rs  fetch.rs  fetcher.rs  lib.rs  main.rs  mapper.rs  models.rs  network.rs  params.rs  readme.rs
gitfetcher/tests/: fetcher_tests.rs  integration_test.rs
helixdb-cfg/: config.hx.json  queries.hx  schema.hx  vector_rules.json
plans/: fagent.md  fetcher.md  fstorage.md
