[package]
name = "econfetcher"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
thiserror = "1.0"
async-trait = "0.1"
cached = "0.42"
