[package]
name = "fstorage"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
tempfile = "3.10.1"

[dependencies]
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1.77"
url = "2.5.0"
log = "0.4.21"
env_logger = "0.11.3"
helix-db = { git = "https://github.com/HelixDB/helix-db.git", default-features = false, features = ["compiler", "vectors", "reqwest"] }
chrono = "0.4.31"
