[package]
name = "fstorage"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
tempfile = "3.10.1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1.77"
url = "2.5.2"
log = "0.4.21"
env_logger = "0.11.3"
reqwest = { version = "0.12.5", features = ["json"] }
helix-db = { git = "https://github.com/HelixDB/helix-db", features = ["full"] }
# helix-db = { path = "../deps/helix-db", features = ["full"] }
chrono = { version = "0.4.39", features = ["serde"] }
deltalake = { version = "0.17.0", features = ["datafusion"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
bincode = "1.3.3"
heed3 = "0.22.0"

[[bin]]
name = "schema_test"
path = "src/bin/schema_test.rs"

[build-dependencies]
helix-db = { git = "https://github.com/HelixDB/helix-db", features = ["full"] }
# helix-db = { path = "../deps/helix-db", features = ["full"] }
anyhow = "1.0"
