[package]
name = "gitfetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
octocrab = "0.45"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
thiserror = "1.0"
anyhow = "1.0"
tempfile = "3.0"
chrono = { version = "0.4", features = ["serde"] }

[[bin]]
name = "gitfetcher"
path = "src/main.rs"
