[package]
name = "gitfetcher"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
deltalake = { version = "0.29.1", features = ["datafusion"] }
fstorage = { path = "../fstorage" }
log = "0.4"
octocrab = { version = "0.45", default-features = false, features = ["rustls", "default-client"] }
rustworkx-core = "0.17.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.18.1", features = ["serde", "v4", "v5"] }
ast = { git = "https://github.com/stakwork/stakgraph.git", package = "ast" }
tempfile = "3.10.1"
base64 = "0.22"
git2 = "0.20"
arrow-json = "56.2.0"
clap = { version = "4.5", features = ["derive"] }
